support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_pragma.i
%module xxx


#pragma SWIG rubbish()


